--- a/pom.xml
+++ b/pom.xml
@@ -18,11 +18,66 @@
 			<version>1.3</version>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- dependencies for embedded-ldap-junit -->
 		<dependency>
 			<groupId>org.zapodot</groupId>
 			<artifactId>embedded-ldap-junit</artifactId>
 			<version>0.5.2</version>
 			<scope>test</scope>
+		</dependency>
+
+		<!-- dependencies for apacheds -->
+		<dependency>
+			<groupId>org.apache.directory.server</groupId>
+			<artifactId>apacheds-all</artifactId>
+			<version>2.0.0-M22</version>
+			<exclusions>
+				<!-- exclude additional LDIF schema files to avoid conflicts through 
+					multiple copies -->
+				<exclusion>
+					<groupId>org.apache.directory.shared</groupId>
+					<artifactId>shared-ldap-schema</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.apache.directory.api</groupId>
+					<artifactId>api-ldap-schema-data</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.directory.server</groupId>
+			<artifactId>apacheds-server-integ</artifactId>
+			<version>2.0.0-M22</version>
+			<exclusions>
+				<!-- exclude additional LDIF schema files to avoid conflicts through 
+					multiple copies -->
+				<exclusion>
+					<groupId>org.apache.directory.shared</groupId>
+					<artifactId>shared-ldap-schema</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.apache.directory.api</groupId>
+					<artifactId>api-ldap-schema-data</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.directory.server</groupId>
+			<artifactId>apacheds-core-integ</artifactId>
+			<version>2.0.0-M22</version>
+			<exclusions>
+				<!-- exclude additional LDIF schema files to avoid conflicts through 
+					multiple copies -->
+				<exclusion>
+					<groupId>org.apache.directory.shared</groupId>
+					<artifactId>shared-ldap-schema</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.apache.directory.api</groupId>
+					<artifactId>api-ldap-schema-data</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 	</dependencies>
 
